# Sentinel

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
apps/api/: deps.py  main.py  pyproject.toml
apps/api/integrations/: converters.py  email.py  github.py  notify.py
apps/api/routers/: incident_groups.py  incidents.py  investigations.py  webhooks.py
apps/dashboard/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  config.ts  index.css  main.tsx  router.tsx  theme.tsx  vite-env.d.ts
apps/dashboard/src/hooks/: useConfirmCause.ts  useHealth.ts  useIncidentGroups.ts  useIncidents.ts  useInvestigation.ts  useInvestigationsForGroups.ts  usePostAlert.ts  useSearch.ts  useStats.ts  useSuggestFix.ts  useTheme.tsx
apps/mcp-ai-pipeline/: pyproject.toml  server.py
apps/mcp-sentinel/: pyproject.toml  server.py
apps/worker/: main.py  pyproject.toml
apps/worker/jobs/: investigate.py
docs/eval/: ai_pipeline.jsonl  cases.jsonl  retrieval.jsonl  verifier.jsonl
experiments/finetune/: compare.py  qlora_qwen.py  serve_local.py
experiments/finetune/data/: train.jsonl
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 3f799cbb6bb0_initial_schema.py  956495874477_add_incident_groups.py  a1c4e7b90d2f_add_past_incidents.py  e803ef1617c7_add_investigation_cost_fields.py
scripts/: build_training_data.py  chaos.py  eval.py  ingest_runbooks.py  seed.py  seed_graph.py
(+46 files in other folders)
